# telegram-types

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  flake.nix  hie.yaml  package.yaml  pkgs.nix  shell.nix  stack.yaml  telegram-types.cabal
.github/workflows/: nix.yml
src/: Common.hs  Utils.hs
src/Web/Telegram/: Types.hs
src/Web/Telegram/Types/: API.hs  Game.hs  Inline.hs  Input.hs  Interaction.hs  Lens.hs  Passport.hs  Payment.hs  Stock.hs  Update.hs  UpdateType.hs
src/Web/Telegram/Types/API/: ChatActions.hs  ChatId.hs  Commands.hs  Games.hs  Inline.hs  Messages.hs  Passports.hs  Payments.hs  Queries.hs  Stickers.hs  Updates.hs
src/Web/Telegram/Types/Internal/: Animation.hs  Audio.hs  BotCommand.hs  CallbackQuery.hs  Chat.hs  Chat.hs-boot  ChatLocation.hs  ChatMember.hs  ChatPermissions.hs  ChatPhoto.hs  ChosenInlineResult.hs  Common.hs  Contact.hs  Dice.hs  Document.hs  EncryptedCredentials.hs  EncryptedPassportElement.hs  File.hs  ForceReply.hs  Game.hs  GameHighScore.hs  InlineKeyboardButton.hs  InlineKeyboardMarkup.hs  InlineQuery.hs  InlineQueryResult.hs  InputFile.hs  InputMedia.hs  InputMessageContent.hs  Invoice.hs  Keyboard.hs  KeyboardButton.hs  KeyboardButtonPollType.hs  LabeledPrice.hs  Location.hs  LoginUrl.hs  MaskPosition.hs  Media.hs  Message.hs  MessageEntity.hs  MessageId.hs  (+32 more)
src/Web/Telegram/Types/Internal/API/: AddStickerToSet.hs  AnswerCallbackQuery.hs  AnswerInlineQuery.hs  AnswerPreCheckoutQuery.hs  AnswerShippingQuery.hs  ChatId.hs  CopyMessage.hs  CreateNewStickerSet.hs  DeleteChatPhoto.hs  DeleteChatStickerSet.hs  DeleteMessage.hs  DeleteStickerFromSet.hs  DeleteWebhook.hs  EditMessageCaption.hs  EditMessageLiveLocation.hs  EditMessageMedia.hs  EditMessageReplyMarkup.hs  EditMessageText.hs  ExportChatInviteLink.hs  ForwardMessage.hs  GetChat.hs  GetChatAdministrators.hs  GetChatMember.hs  GetChatMembersCount.hs  GetFile.hs  GetGameHighScores.hs  GetStickerSet.hs  GetUpdates.hs  GetUserProfilePhotos.hs  KickChatMember.hs  LeaveChat.hs  PinChatMessage.hs  PromoteChatMember.hs  RestrictChatMember.hs  SendAnimation.hs  SendAudio.hs  SendChatAction.hs  SendContact.hs  SendDice.hs  SendDocument.hs  (+30 more)
src/Web/Telegram/Types/Internal/Utils/: Default.hs  Stock.hs
test/: Message1  Spec.hs
