cabal-version:   3.0
name:            telegram-types
version:         0.1.0

-- synopsis:
-- description:
-- category:
license:         BSD-3-Clause
license-file:    LICENSE
author:          Poscat
maintainer:      Poscat <poscat@mail.poscat.moe>
copyright:       Copyright (c) Poscat 2021
stability:       alpha
homepage:        https://github.com/poscat0x04/telegram-types
bug-reports:     https://github.com/poscat0x04/telegram-types/issues
extra-doc-files:
  CHANGELOG.md
  README.md

common common-attrs
  build-depends:
    , aeson
    , base             >=4.10 && <5
    , bytestring
    , conduit
    , containers
    , http-client
    , http-client-tls
    , http-conduit
    , optics-core
    , optics-th
    , text
    , time

  ghc-options:        -funbox-strict-fields
  default-language:   Haskell2010
  default-extensions:
    NoStarIsType
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    PartialTypeSignatures
    PatternSynonyms
    QuantifiedConstraints
    RecordWildCards
    RoleAnnotations
    ScopedTypeVariables
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    UndecidableInstances
    ViewPatterns

library
  import:          common-attrs
  build-depends:
  exposed-modules:

  -- cabal-fmt: expand src
  other-modules:
    Common
    Utils
    Web.Telegram.Types.Internal.Animation
    Web.Telegram.Types.Internal.API.AddStickerToSet
    Web.Telegram.Types.Internal.API.AnswerCallbackQuery
    Web.Telegram.Types.Internal.API.AnswerInlineQuery
    Web.Telegram.Types.Internal.API.AnswerPreCheckoutQuery
    Web.Telegram.Types.Internal.API.AnswerShippingQuery
    Web.Telegram.Types.Internal.API.ChatId
    Web.Telegram.Types.Internal.API.CopyMessage
    Web.Telegram.Types.Internal.API.CreateNewStickerSet
    Web.Telegram.Types.Internal.API.DeleteChatPhoto
    Web.Telegram.Types.Internal.API.DeleteChatStickerSet
    Web.Telegram.Types.Internal.API.DeleteMessage
    Web.Telegram.Types.Internal.API.DeleteStickerFromSet
    Web.Telegram.Types.Internal.API.DeleteWebhook
    Web.Telegram.Types.Internal.API.EditMessageCaption
    Web.Telegram.Types.Internal.API.EditMessageLiveLocation
    Web.Telegram.Types.Internal.API.EditMessageMedia
    Web.Telegram.Types.Internal.API.EditMessageReplyMarkup
    Web.Telegram.Types.Internal.API.EditMessageText
    Web.Telegram.Types.Internal.API.ExportChatInviteLink
    Web.Telegram.Types.Internal.API.ForwardMessage
    Web.Telegram.Types.Internal.API.GetChat
    Web.Telegram.Types.Internal.API.GetChatAdministrators
    Web.Telegram.Types.Internal.API.GetChatMember
    Web.Telegram.Types.Internal.API.GetChatMembersCount
    Web.Telegram.Types.Internal.API.GetGameHighScores
    Web.Telegram.Types.Internal.API.GetStickerSet
    Web.Telegram.Types.Internal.API.GetUpdates
    Web.Telegram.Types.Internal.API.KickChatMember
    Web.Telegram.Types.Internal.API.LeaveChat
    Web.Telegram.Types.Internal.API.PinChatMessage
    Web.Telegram.Types.Internal.API.PromoteChatMember
    Web.Telegram.Types.Internal.API.RestrictChatMember
    Web.Telegram.Types.Internal.API.SendAnimation
    Web.Telegram.Types.Internal.API.SendAudio
    Web.Telegram.Types.Internal.API.SendChatAction
    Web.Telegram.Types.Internal.API.SendContact
    Web.Telegram.Types.Internal.API.SendDice
    Web.Telegram.Types.Internal.API.SendDocument
    Web.Telegram.Types.Internal.API.SendGame
    Web.Telegram.Types.Internal.API.SendInvoice
    Web.Telegram.Types.Internal.API.SendLocation
    Web.Telegram.Types.Internal.API.SendMessage
    Web.Telegram.Types.Internal.API.SendPhoto
    Web.Telegram.Types.Internal.API.SendPoll
    Web.Telegram.Types.Internal.API.SendSticker
    Web.Telegram.Types.Internal.API.SendVenue
    Web.Telegram.Types.Internal.API.SendVideo
    Web.Telegram.Types.Internal.API.SendVoice
    Web.Telegram.Types.Internal.API.SendVoiceNote
    Web.Telegram.Types.Internal.API.SetChatAdministratorCustomTitle
    Web.Telegram.Types.Internal.API.SetChatDescription
    Web.Telegram.Types.Internal.API.SetChatPermissions
    Web.Telegram.Types.Internal.API.SetChatPhoto
    Web.Telegram.Types.Internal.API.SetChatStickerSet
    Web.Telegram.Types.Internal.API.SetChatTitle
    Web.Telegram.Types.Internal.API.SetGameScore
    Web.Telegram.Types.Internal.API.SetMyCommands
    Web.Telegram.Types.Internal.API.SetPassportDataErrors
    Web.Telegram.Types.Internal.API.SetStickerPositionInSet
    Web.Telegram.Types.Internal.API.SetStickerSetThumb
    Web.Telegram.Types.Internal.API.SetWebhook
    Web.Telegram.Types.Internal.API.StopMessageLiveLocation
    Web.Telegram.Types.Internal.API.StopPoll
    Web.Telegram.Types.Internal.API.UnbanChatMember
    Web.Telegram.Types.Internal.API.UnpinAllChatMessages
    Web.Telegram.Types.Internal.API.UnpinChatMessage
    Web.Telegram.Types.Internal.API.UploadStickerFile
    Web.Telegram.Types.Internal.Audio
    Web.Telegram.Types.Internal.BotCommand
    Web.Telegram.Types.Internal.CallbackQuery
    Web.Telegram.Types.Internal.Chat
    Web.Telegram.Types.Internal.ChatLocation
    Web.Telegram.Types.Internal.ChatMember
    Web.Telegram.Types.Internal.ChatPermissions
    Web.Telegram.Types.Internal.ChatPhoto
    Web.Telegram.Types.Internal.ChosenInlineResult
    Web.Telegram.Types.Internal.Contact
    Web.Telegram.Types.Internal.Dice
    Web.Telegram.Types.Internal.Document
    Web.Telegram.Types.Internal.EncryptedCredentials
    Web.Telegram.Types.Internal.EncryptedPassportElement
    Web.Telegram.Types.Internal.File
    Web.Telegram.Types.Internal.ForceReply
    Web.Telegram.Types.Internal.Game
    Web.Telegram.Types.Internal.GameHighScore
    Web.Telegram.Types.Internal.InlineKeyboardButton
    Web.Telegram.Types.Internal.InlineKeyboardMarkup
    Web.Telegram.Types.Internal.InlineQuery
    Web.Telegram.Types.Internal.InlineQueryResult
    Web.Telegram.Types.Internal.InputFile
    Web.Telegram.Types.Internal.InputMedia
    Web.Telegram.Types.Internal.InputMessageContent
    Web.Telegram.Types.Internal.Invoice
    Web.Telegram.Types.Internal.KeyboardButton
    Web.Telegram.Types.Internal.KeyboardButtonPollType
    Web.Telegram.Types.Internal.LabeledPrice
    Web.Telegram.Types.Internal.Location
    Web.Telegram.Types.Internal.LoginUrl
    Web.Telegram.Types.Internal.MaskPosition
    Web.Telegram.Types.Internal.Message
    Web.Telegram.Types.Internal.MessageEntity
    Web.Telegram.Types.Internal.MessageId
    Web.Telegram.Types.Internal.OrderInfo
    Web.Telegram.Types.Internal.PassportData
    Web.Telegram.Types.Internal.PassportElementError
    Web.Telegram.Types.Internal.PassportFile
    Web.Telegram.Types.Internal.PhotoSize
    Web.Telegram.Types.Internal.Poll
    Web.Telegram.Types.Internal.PollAnswer
    Web.Telegram.Types.Internal.PollOption
    Web.Telegram.Types.Internal.PreCheckoutQuery
    Web.Telegram.Types.Internal.ProximityAlertTriggered
    Web.Telegram.Types.Internal.ReplyKeyboardMarkup
    Web.Telegram.Types.Internal.ReplyKeyboardRemove
    Web.Telegram.Types.Internal.ReplyMarkup
    Web.Telegram.Types.Internal.ResponseParameters
    Web.Telegram.Types.Internal.ShippingAddress
    Web.Telegram.Types.Internal.ShippingOption
    Web.Telegram.Types.Internal.ShippingQuery
    Web.Telegram.Types.Internal.Sticker
    Web.Telegram.Types.Internal.StickerSet
    Web.Telegram.Types.Internal.SuccessfulPayment
    Web.Telegram.Types.Internal.Update
    Web.Telegram.Types.Internal.User
    Web.Telegram.Types.Internal.UserProfilePhotos
    Web.Telegram.Types.Internal.Venue
    Web.Telegram.Types.Internal.Video
    Web.Telegram.Types.Internal.VideoNote
    Web.Telegram.Types.Internal.Voice
    Web.Telegram.Types.Internal.WebhookInfo

  hs-source-dirs:  src

test-suite telegram-types-test
  import:         common-attrs
  type:           exitcode-stdio-1.0
  build-depends:  telegram-types
  hs-source-dirs: test
  main-is:        Spec.hs

source-repository head
  type:     git
  location: https://github.com/poscat0x04/telegram-types
